--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -110,7 +110,7 @@ jobs:
         run: poetry check -C api --lock
 
       - name: Install dependencies
-        run: poetry install --sync -C api --with dev
+        run: poetry install -C api --with dev
 
       - name: Run Unit tests
         run: poetry run -C api bash dev/pytest/pytest_unit_tests.sh
